# interfacetodns

./: README.md  pyproject.toml
src/interfacetodns/: cli.py  db.py  device.py  zones.py
tests/: __init__.py
