[tool.poetry]
name = "interfacetodns"
version = "1.1.1"
description = "Get interfaces from network devices and generate reverse DNS records."
authors = ["Rob Woodward <rob@emailplus.org>"]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/robwdwd/interfacetodns"
include = ["README.md", "LICENSE"]


[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.0"
easysnmp2 = "^0.3.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
pydocstyle = "^6.1.1"
pylint = "^2.15.0"
black = "^22.8.0"

[tool.poetry.scripts]
interfacetodns = "interfacetodns.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
